--- a/apendice2.tex
+++ b/apendice2.tex
@@ -1,18 +1,18 @@
 \chapter{Resultados Detalhados}\label{detalhes}
-Neste apÍndice s„o apresentados detalhes adicionais dos experimentos reportados
-nos capÌtulos \ref{experimentos} e \ref{aml}.
+Neste ap√™ndice s√£o apresentados detalhes adicionais dos experimentos reportados
+nos cap√≠tulos \ref{experimentos} e \ref{aml}.
 
-\section{DescriÁ„o das bases de dados}
+\section{Descri√ß√£o das bases de dados}
 \input dataset-tables
 
-\section{Acur·cia dos classificadores}
-Os valores de acur·cia empregados na comparaÁ„o de algoritmos de aprendizado
-exposta na SeÁ„o \ref{algs} s„o apresentados nas tabelas \ref{tab:balaccClassif0},
+\section{Acur√°cia dos classificadores}
+Os valores de acur√°cia empregados na compara√ß√£o de algoritmos de aprendizado
+exposta na Se√ß√£o \ref{algs} s√£o apresentados nas tabelas \ref{tab:balaccClassif0},
 \ref{tab:balaccClassif1} e \ref{tab:balaccClassif2}.
 \input{classifsTab}
 
-\section{Acur·cia das estratÈgias}
-\esb{Rnd n„o vence isoladamente em nenhuma das bases com os classificadores selecionados?}
+\section{Acur√°cia das estrat√©gias}
+\esb{Rnd n√£o vence isoladamente em nenhuma das bases com os classificadores selecionados?}
 
 \subsection{5NN}
 \afterpage{\clearpage\begin{landscape}
