--- a/apendice3.tex
+++ b/apendice3.tex
@@ -1,15 +1,15 @@
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Formatação e estilo}\label{estilo}
-Algumas regras foram adotadas para maior consistência do texto.
+\chapter{FormataÃ§Ã£o e estilo}\label{estilo}
+Algumas regras foram adotadas para maior consistÃªncia do texto.
 
-Siglas e símbolos são empregados conforme o uso mais comum na literatura pesquisada.
-Por exemplo, uma variável representada por uma letra é mnemônica a uma palavra inglesa - ou de outro idioma se for o caso do termo original.
-Os termos que introduzem um tópico não merecedor de uma seção própria aparecem em negrito.
+Siglas e sÃ­mbolos sÃ£o empregados conforme o uso mais comum na literatura pesquisada.
+Por exemplo, uma variÃ¡vel representada por uma letra Ã© mnemÃ´nica a uma palavra inglesa - ou de outro idioma se for o caso do termo original.
+Os termos que introduzem um tÃ³pico nÃ£o merecedor de uma seÃ§Ã£o prÃ³pria aparecem em negrito.
 
-As notas de rodapé são dispensáveis para o entendimento do texto, porém elas foram adotadas nos casos a seguir para facilitar o escrutínio quando desejado.
-Quando possível, os termos em inglês foram traduzidos para o português sem perda do sentido original.
-Na primeira ocorrência de cada tradução, ela aparece escrita em itálico (quando já não estiver destacada de outra forma por outro motivo) com os seus respectivos termos originais dados em nota de rodapé.
-Termos com tradução incerta aparecem sempre em itálico, mas com uma sugestão de tradução em nota de rodapé apenas na primeira ocorrência.
-Nesse caso, as notas de rodapé são dadas em minúsculas e entre colchetes.
-Expressões sublinhadas indicam a existência de maiores detalhes em notas de rodapé.
+As notas de rodapÃ© sÃ£o dispensÃ¡veis para o entendimento do texto, porÃ©m elas foram adotadas nos casos a seguir para facilitar o escrutÃ­nio quando desejado.
+Quando possÃ­vel, os termos em inglÃªs foram traduzidos para o portuguÃªs sem perda do sentido original.
+Na primeira ocorrÃªncia de cada traduÃ§Ã£o, ela aparece escrita em itÃ¡lico (quando jÃ¡ nÃ£o estiver destacada de outra forma por outro motivo) com os seus respectivos termos originais dados em nota de rodapÃ©.
+Termos com traduÃ§Ã£o incerta aparecem sempre em itÃ¡lico, mas com uma sugestÃ£o de traduÃ§Ã£o em nota de rodapÃ© apenas na primeira ocorrÃªncia.
+Nesse caso, as notas de rodapÃ© sÃ£o dadas em minÃºsculas e entre colchetes.
+ExpressÃµes sublinhadas indicam a existÃªncia de maiores detalhes em notas de rodapÃ©.
 %
