--- a/apendice5.tex
+++ b/apendice5.tex
@@ -1,60 +1,60 @@
-\chapter{Revis„o sistem·tica}\label{revsist}
+\chapter{Revis√£o sistem√°tica}\label{revsist}
 
-\ano{a revis„o sist. n„o chegou a lugar algum, n„o compensaria dedicar um capÌtulo inteiro a
-ela; porÈm no final de tudo, com a tese quase pronta, posso readequ·-la e incluÌ-la}
+\ano{a revis√£o sist. n√£o chegou a lugar algum, n√£o compensaria dedicar um cap√≠tulo inteiro a
+ela; por√©m no final de tudo, com a tese quase pronta, posso readequ√°-la e inclu√≠-la}
 
 
 \ano{tema: active learning
-problema: h· v·rias estratÈgias, como escolher uma delas?
-protocolo de revis„o:
-        background: framework teÛrico; problem·tica e objetivo
-        questıes de pesquisa:
-        estratÈgia de busca: palavras-chave, sinÙnimos e relacionadas
-        critÈrios: tipo de estudo, de inclus„o e exclus„o
-        seleÁ„o: etapas, plano
-        avaliaÁ„o da qualidade: critÈrios
-        extraÁ„o de dados: como, o quÍ
-        calend·rio: }
+problema: h√° v√°rias estrat√©gias, como escolher uma delas?
+protocolo de revis√£o:
+        background: framework te√≥rico; problem√°tica e objetivo
+        quest√µes de pesquisa:
+        estrat√©gia de busca: palavras-chave, sin√¥nimos e relacionadas
+        crit√©rios: tipo de estudo, de inclus√£o e exclus√£o
+        sele√ß√£o: etapas, plano
+        avalia√ß√£o da qualidade: crit√©rios
+        extra√ß√£o de dados: como, o qu√™
+        calend√°rio: }
 
 
-        \blue{Revis„o bibliogr·fica sistem·tica È um procedimento de identificaÁ„o,
-avaliaÁ„o e interpretaÁ„o de toda pesquisa relevante disponÌvel a respeito
-de uma particular quest„o ou assunto de interesse \citep{Kitchenham2007}.
-O intento original da revis„o sistem·tica era suportar a medicina baseada em evidÍncia.
-Atualmente, trata-se de um mÈtodo tambÈm bastante utilizado na ·rea de engenharia de
+        \blue{Revis√£o bibliogr√°fica sistem√°tica √© um procedimento de identifica√ß√£o,
+avalia√ß√£o e interpreta√ß√£o de toda pesquisa relevante dispon√≠vel a respeito
+de uma particular quest√£o ou assunto de interesse \citep{Kitchenham2007}.
+O intento original da revis√£o sistem√°tica era suportar a medicina baseada em evid√™ncia.
+Atualmente, trata-se de um m√©todo tamb√©m bastante utilizado na √°rea de engenharia de
 \textit{software}.
-Por outro lado, na ·rea de aprendizado de m·quina,
-esse tipo de revis„o È uma tendÍncia mais recente
-e com poucas publicaÁıes como È o caso do trabalho de \cite{journals/jbcs/PisaniL13}.
+Por outro lado, na √°rea de aprendizado de m√°quina,
+esse tipo de revis√£o √© uma tend√™ncia mais recente
+e com poucas publica√ß√µes como √© o caso do trabalho de \cite{journals/jbcs/PisaniL13}.
 Na base de dados Scopus\footnote{\textit{http://www.scopus.com} - 02/06/2014}, por exemplo,
-h· apenas 16 trabalhos na ·rea sobre ou que apliquem revis„o sistem·tica
-enquanto que, para engenharia de \textit{software}, h· 203.
+h√° apenas 16 trabalhos na √°rea sobre ou que apliquem revis√£o sistem√°tica
+enquanto que, para engenharia de \textit{software}, h√° 203.
 }
 
-% Neste capÌtulo s„o apresentados os ?? e resultados da revis„o bibliogr·fica.
+% Neste cap√≠tulo s√£o apresentados os ?? e resultados da revis√£o bibliogr√°fica.
 %
-% questıes que me vieram ‡ mente trabalhando na ·rea:
-% Que garantias existem de que uma estratÈgia de aprendizado ativo È economicamente vi·vel?
-% \# Essa quest„o me interessa porque ela pıe em cheque a real utilidade de AL.
-%    Elas s„o significativamente melhores do que a amostragem aleatÛria?
-%    Em que situaÁıes o desempenho È pior?
-%    Quando a variabilidade no desempenho se torna um risco para o orÁamento?
-% \# H· teoria de algumas estratÈgias no que diz respeito a se ter garantias de n„o ser pior do que
-% aleatÛrio.
-% \# A melhor maneira de averiguar esses pontos È por meio de experimentaÁ„o.
+% quest√µes que me vieram √† mente trabalhando na √°rea:
+% Que garantias existem de que uma estrat√©gia de aprendizado ativo √© economicamente vi√°vel?
+% \# Essa quest√£o me interessa porque ela p√µe em cheque a real utilidade de AL.
+%    Elas s√£o significativamente melhores do que a amostragem aleat√≥ria?
+%    Em que situa√ß√µes o desempenho √© pior?
+%    Quando a variabilidade no desempenho se torna um risco para o or√ßamento?
+% \# H√° teoria de algumas estrat√©gias no que diz respeito a se ter garantias de n√£o ser pior do que
+% aleat√≥rio.
+% \# A melhor maneira de averiguar esses pontos √© por meio de experimenta√ß√£o.
 % \# Trata-se de um problema extremamente relevante.
 %
-% As estratÈgias da literatura s„o usadas na pr·tica?
-% H· algoritmos de aprendizado mais adequados do que outros para aprendizado ativo?
-% … possÌvel ter uma estratÈgia boa para qualquer algoritmo de aprendizado? Sen„o, como escolher?
-% … possÌvel ter uma estratÈgia boa para qualquer domÌnio de aplicaÁ„o? Sen„o, como escolher?
-% As estratÈgias existentes s„o vi·veis para interaÁ„o com o usu·rio em tempo real?
-% Quais s„o as estratÈgias de aprendizado ativo mais relevantes?
-% Quais s„o os principais paradigmas em que as estratÈgias se agrupam?
+% As estrat√©gias da literatura s√£o usadas na pr√°tica?
+% H√° algoritmos de aprendizado mais adequados do que outros para aprendizado ativo?
+% √â poss√≠vel ter uma estrat√©gia boa para qualquer algoritmo de aprendizado? Sen√£o, como escolher?
+% √â poss√≠vel ter uma estrat√©gia boa para qualquer dom√≠nio de aplica√ß√£o? Sen√£o, como escolher?
+% As estrat√©gias existentes s√£o vi√°veis para intera√ß√£o com o usu√°rio em tempo real?
+% Quais s√£o as estrat√©gias de aprendizado ativo mais relevantes?
+% Quais s√£o os principais paradigmas em que as estrat√©gias se agrupam?
 %
 % background
 %
-% propÛsito/objs - apresentar evidencias
+% prop√≥sito/objs - apresentar evidencias
 %
 % inc/exc criterios
 %
@@ -75,56 +75,56 @@ enquanto que, para engenharia de \textit{software}, h· 203.
 %
 % temas recorrentes: desbalanceamento
 % \section{Metodologia}
-% % coisas comuns ‡s trÍs revisıes
+% % coisas comuns √†s tr√™s revis√µes
 %
 % Visando artigos recentes, com alguma garantia de qualidade
-% Scopus-CiÍncias fÌsicas (7.200 publicaÁıes)- base de acesso restrito, foram selecionados apenas
-% artigos dos ˙ltimos quatro anos (140/141), devido ao grande n˙mero de resultados (944)
-% ACM (411.762 publicaÁıes prÛprias e de afiliados) - base com poucos resultados (57/57)
-% Springer-ComputaÁ„o (3.321) ALcomAcessoAoPDF(21)
-% Visando artigos influentes, ou seja, com muitas citaÁıes.
-% Artigos muito recentes ficam naturalmente excluÌdos por tenderem a ter menos citaÁıes -
+% Scopus-Ci√™ncias f√≠sicas (7.200 publica√ß√µes)- base de acesso restrito, foram selecionados apenas
+% artigos dos √∫ltimos quatro anos (140/141), devido ao grande n√∫mero de resultados (944)
+% ACM (411.762 publica√ß√µes pr√≥prias e de afiliados) - base com poucos resultados (57/57)
+% Springer-Computa√ß√£o (3.321) ALcomAcessoAoPDF(21)
+% Visando artigos influentes, ou seja, com muitas cita√ß√µes.
+% Artigos muito recentes ficam naturalmente exclu√≠dos por tenderem a ter menos cita√ß√µes -
 % exceto artigos recentes de alto impacto.
-% Google AcadÍmico-ComputaÁ„o (5.350.000 publicaÁıes) - (19700) Foram selecionados apenas os
-% artigos com mais de 25 citaÁıes na ordem de relev‚ncia determinada pelo critÈrio interno do Google
+% Google Acad√™mico-Computa√ß√£o (5.350.000 publica√ß√µes) - (19700) Foram selecionados apenas os
+% artigos com mais de 25 cita√ß√µes na ordem de relev√¢ncia determinada pelo crit√©rio interno do Google
 % (121/130)
-% IEEE (3.748.954 publicaÁıes) - (382) Foram selecionados apenas os 48/50 artigos mais citados, o
-% que equivale a artigos com mais de quatro citaÁıes
+% IEEE (3.748.954 publica√ß√µes) - (382) Foram selecionados apenas os 48/50 artigos mais citados, o
+% que equivale a artigos com mais de quatro cita√ß√µes
 %
 % 10 duplicados foram encontrados automaticamente
 %
-% A literatura de aprendizado ativo normalmente deixa o cen·rio baseado em pool implÌcito.
-% Por isso, È necess·rio excluir os outros cen·rios na consulta.
+% A literatura de aprendizado ativo normalmente deixa o cen√°rio baseado em pool impl√≠cito.
+% Por isso, √© necess√°rio excluir os outros cen√°rios na consulta.
 %
 % \section{Aprendizado Ativo}
-% N„o È do conhecimento do autor nenhuma revis„o sistem·tica sobre aprendizado ativo,
-% porÈm existem revisıes convencionais sobre os diferentes cen·rios e estratÈgias.
-% Tais revisıes s„o usadas para complementar a revis„o sistem·tica ??.
+% N√£o √© do conhecimento do autor nenhuma revis√£o sistem√°tica sobre aprendizado ativo,
+% por√©m existem revis√µes convencionais sobre os diferentes cen√°rios e estrat√©gias.
+% Tais revis√µes s√£o usadas para complementar a revis√£o sistem√°tica ??.
 %
-% Prim·rio: fazer uma prospecÁ„o da ·rea em busca das estratÈgias existentes para o
+% Prim√°rio: fazer uma prospec√ß√£o da √°rea em busca das estrat√©gias existentes para o
 %
 %
-% % mapeamento sistem·ticos empregados nesta tese.
-% % Esses procedimentos visam a replicabilidade e n„o-enviesamento sÛ isso?? da
-% % revis„o bibliogr·fica e foram empregados conforme as recomendaÁıes
-% % encontradas na literatura especÌfica de aprendizado de m·quina \cite{}.
+% % mapeamento sistem√°ticos empregados nesta tese.
+% % Esses procedimentos visam a replicabilidade e n√£o-enviesamento s√≥ isso?? da
+% % revis√£o bibliogr√°fica e foram empregados conforme as recomenda√ß√µes
+% % encontradas na literatura espec√≠fica de aprendizado de m√°quina \cite{}.
 % %
-% % O mapeamento foi necess·rio para explorar a vasta ·rea
+% % O mapeamento foi necess√°rio para explorar a vasta √°rea
 % % de aprendizado ativo de maneira eficiente em busca
-% % das questıes mais importantes,
+% % das quest√µes mais importantes,
 % %
 % %
 % % \subsection{Planejamento}
-% % questıes
-% % protocolo (definiÁ„o da informaÁ„o-alvo, estratÈgias de busca, seleÁ„o e avaliaÁ„o das
-% % referÍncias)
-% % \subsection{ConduÁ„o}
-% % maximizar refs que respondam ‡s perguntas
-% % estudos prim·rios (
+% % quest√µes
+% % protocolo (defini√ß√£o da informa√ß√£o-alvo, estrat√©gias de busca, sele√ß√£o e avalia√ß√£o das
+% % refer√™ncias)
+% % \subsection{Condu√ß√£o}
+% % maximizar refs que respondam √†s perguntas
+% % estudos prim√°rios (
 % % excluir irrelevantes, checar qualidade, extrair info,
 % % sumarizar
 % % )
-% % estudos secund·rios
+% % estudos secund√°rios
 % %
 % % \subsection{Resultados}
 % %
@@ -134,16 +134,16 @@ enquanto que, para engenharia de \textit{software}, h· 203.
 % %
 % %
 % % AL
-% % Vantagens/raz„o de ser?
-% % Qual o estado atual da ·rea? (desenvolvimento teÛrico Hanneke/Dasgupta/Balcan/Beygelzimer e
-% propostas statist. sÛlidas; Settles, duo lingo, musica e propostas ad hoc)
-% % EstratÈgias?
-% % MÈtricas de performance? (ALC, )
-% % Formas de avaliaÁ„o? (pool=tr+ts, 5-fold, 50/50 holdout)
-% % Datasets? H· como comparar resultados?
+% % Vantagens/raz√£o de ser?
+% % Qual o estado atual da √°rea? (desenvolvimento te√≥rico Hanneke/Dasgupta/Balcan/Beygelzimer e
+% propostas statist. s√≥lidas; Settles, duo lingo, musica e propostas ad hoc)
+% % Estrat√©gias?
+% % M√©tricas de performance? (ALC, )
+% % Formas de avalia√ß√£o? (pool=tr+ts, 5-fold, 50/50 holdout)
+% % Datasets? H√° como comparar resultados?
 % %
-% % Quest„o principal:
-% % Quando AL È efetivo?
+% % Quest√£o principal:
+% % Quando AL √© efetivo?
 % % Quais vantagens de se adotar AL? E desvantagens?
 % %
 % % definir palavras-chave (consultas)
@@ -161,7 +161,7 @@ enquanto que, para engenharia de \textit{software}, h· 203.
 % % (http://www.scopus.com/)
 % %
 % %
-% % CritÈrio de exclus„o:
+% % Crit√©rio de exclus√£o:
 % % . Publications that do not deal with keystroke dynamics
 % % for intrusion detection: the aim of this review is to work
 % % with intrusion detection, which comprehends authentica-
@@ -177,7 +177,7 @@ enquanto que, para engenharia de \textit{software}, h· 203.
 % % 3. Publication hosted in services with restricted access and
 % % not accessible or publications not written in English.
 % %
-% % AvaliaÁ„o da qualidade
+% % Avalia√ß√£o da qualidade
 % %
 % % design, conduction, analysis and conclusion:
 % %  Kitchenham B, Charters S (2007) Guidelines for performing sys-
@@ -229,7 +229,7 @@ enquanto que, para engenharia de \textit{software}, h· 203.
 % %
 % % tabela comparando estrategias
 % %
-% % histograma de adoÁ„o de metodos ou de ter uma propriedade especifica
+% % histograma de ado√ß√£o de metodos ou de ter uma propriedade especifica
 % %
 % %  tabela de classificadores adotados
 % %
