--- a/arvore.tex
+++ b/arvore.tex
@@ -9,9 +9,9 @@ decision tree/.style={sibling distance=3cm, level distance=2cm},
 cond/.style={blue, yshift=-2mm, shape=rectangle, text centered},
 }
 \begin{center}
-\caption{Distribuição das vitórias.
-\textit{Uma colocação entre as três melhores é contabilizada como vitória.
-% As $25\%$ menos frequentes são representadas pela categoria ``outras''.
+\caption{DistribuiÃ§Ã£o das vitÃ³rias.
+\textit{Uma colocaÃ§Ã£o entre as trÃªs melhores Ã© contabilizada como vitÃ³ria.
+% As $25\%$ menos frequentes sÃ£o representadas pela categoria ``outras''.
 }
 }
 \scalebox{0.9}{
