--- a/arvorebest.tex
+++ b/arvorebest.tex
@@ -10,14 +10,14 @@ cond/.style={blue, yshift=-2mm, shape=rectangle, text centered},
 }
 \begin{center}
 \caption{
-Distribuição das vitórias.
+DistribuiÃ§Ã£o das vitÃ³rias.
 % de acordo com o algoritmo
-% usado e características de cada base.
+% usado e caracterÃ­sticas de cada base.
 \textit{Detalhes na Figura \ref{treebadleas}.
-% As folhas apresentam a distribuição de vitórias das estratégias.
-% Um empate ou colocação entre as três melhores é contabilizada como vitória.
-% As estratégias menos frequentes são representadas pela categoria ``demais''.
-% Mínimo de $10$ exemplos por folha.
+% As folhas apresentam a distribuiÃ§Ã£o de vitÃ³rias das estratÃ©gias.
+% Um empate ou colocaÃ§Ã£o entre as trÃªs melhores Ã© contabilizada como vitÃ³ria.
+% As estratÃ©gias menos frequentes sÃ£o representadas pela categoria ``demais''.
+% MÃ­nimo de $10$ exemplos por folha.
 }
 }
 \begin{tikzpicture} [edge from parent/.style={->,above,draw,sloped,midway,gray!30,ultra thick},
