--- a/arvorebestperd.tex
+++ b/arvorebestperd.tex
@@ -9,9 +9,9 @@ decision tree/.style={sibling distance=3cm, level distance=2cm},
 cond/.style={blue, yshift=-2mm, shape=rectangle, text centered},
 }
 \begin{center}
-\caption{Nichos desfavoráveis para cada estratégia. Para cada base foi adotado o melhor algoritmo.
-Mínimo de $4$ exemplos por folha.
-\textit{Árvore de decisão gerada pelo algoritmo C4.5w.
+\caption{Nichos desfavorÃ¡veis para cada estratÃ©gia. Para cada base foi adotado o melhor algoritmo.
+MÃ­nimo de $4$ exemplos por folha.
+\textit{Ãrvore de decisÃ£o gerada pelo algoritmo C4.5w.
 Quantidade de exemplos e grau de pureza dados nas folhas.}
 }
 \begin{tikzpicture} [edge from parent/.style={->,above,draw,sloped,midway,gray!30,ultra thick},
