--- a/arvoreperd.tex
+++ b/arvoreperd.tex
@@ -9,8 +9,8 @@ decision tree/.style={sibling distance=3cm, level distance=2cm},
 cond/.style={blue, yshift=-2mm, shape=rectangle, text centered},
 }
 \begin{center}
-\caption{Nichos desfavoráveis para cada estratégia para todas as combinações base-algoritmo.
-Mínimo de $20$ exemplos por folha. \textit{Detalhes na Figura \ref{treeBest}}.
+\caption{Nichos desfavorÃ¡veis para cada estratÃ©gia para todas as combinaÃ§Ãµes base-algoritmo.
+MÃ­nimo de $20$ exemplos por folha. \textit{Detalhes na Figura \ref{treeBest}}.
 }
 \begin{tikzpicture} [edge from parent/.style={->,above,draw,sloped,midway,gray!30,ultra thick},
 text width=2.7cm, align=flush center, grow cyclic,
