--- a/capa.tex
+++ b/capa.tex
@@ -57,9 +57,9 @@
 % \begin{Sbox}
 % \begin{minipage}{8.5cm}
 % \footnotesize
-% SERVIÇO DE  PÓS-GRADUAÇÃO DO ICMC-USP\\
+% SERVIÃ‡O DE  PÃ“S-GRADUAÃ‡ÃƒO DO ICMC-USP\\
 % \\
-% Data de Depósito: \\
+% Data de DepÃ³sito: \\
 % \\
 % Assinatura:\hrulefill
 % \end{minipage}
@@ -94,7 +94,7 @@
 %
 % \vspace*{2cm}
 % \begin{center}
-% \textbf{USP - São Carlos \\\data}
+% \textbf{USP - SÃ£o Carlos \\\data}
 % \end{center}
 % \cleardoublepage
 
