--- a/conclusao.tex
+++ b/conclusao.tex
@@ -1,4 +1,4 @@
-% \chapter{Considerações Finais}
-\chapter{Conclusão}\label{conclusao}
+% \chapter{ConsideraÃ§Ãµes Finais}
+\chapter{ConclusÃ£o}\label{conclusao}
 
 \esb{unifica resumidamente os resultados de maneira coerente}
