--- a/dataset-tables-reduxes.tex
+++ b/dataset-tables-reduxes.tex
@@ -1,9 +1,8 @@
-
 \begin{table}[h]
 \caption{Bases de dados mais desbalanceadas.}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 84-volcanoes b2 & 8530 & 5 & 3 & 0 &  96.5 &   0.2\\
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritÃ¡ria\\(\%)}} & \rotatebox{0}{\makecell{minoritÃ¡ria\\(\%)}}\\ \hline 84-volcanoes b2 & 8530 & 5 & 3 & 0 &  96.5 &   0.2\\
 46-page blocks & 4314 & 5 & 10 & 0 &  90.5 &   0.5\\
 85-volcanoes d1 & 7002 & 5 & 3 & 0 &  94.4 &   0.6\\\hline
 86-volcanoes e2 & 863 & 5 & 3 & 0 &  91.2 &   0.7\\
@@ -36,7 +35,7 @@
 \caption{Bases de dados com mais atributos.}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 2-arcene & 160 & 2 & 998 & 0 &  56.0 &  44.0\\
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritÃ¡ria\\(\%)}} & \rotatebox{0}{\makecell{minoritÃ¡ria\\(\%)}}\\ \hline 2-arcene & 160 & 2 & 998 & 0 &  56.0 &  44.0\\
 59-semeion & 1274 & 10 & 256 & 0 &  10.2 &   9.7\\
 18-dbworld subjects & 50 & 2 & 242 & 242 &  55.6 &  44.4\\\hline
 26-hill valley withou... & 970 & 2 & 100 & 0 &  50.5 &  49.5\\
@@ -61,7 +60,7 @@
 \caption{Bases de dados com mais classes.}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 32-leaf & 272 & 30 & 15 & 0 &   4.7 &   2.4\\
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritÃ¡ria\\(\%)}} & \rotatebox{0}{\makecell{minoritÃ¡ria\\(\%)}}\\ \hline 32-leaf & 272 & 30 & 15 & 0 &   4.7 &   2.4\\
 42-movement libras 10 & 192 & 15 & 90 & 0 &   7.5 &   6.3\\
 41-movement libras & 264 & 15 & 90 & 0 &   7.3 &   6.4\\\hline
 78-turkiye student & 2667 & 13 & 32 & 0 &  13.6 &   0.5\\
@@ -84,7 +83,7 @@
 \caption{Bases de dados com mais exemplos.}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 84-volcanoes b2 & 8530 & 5 & 3 & 0 &  96.5 &   0.2\\
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritÃ¡ria\\(\%)}} & \rotatebox{0}{\makecell{minoritÃ¡ria\\(\%)}}\\ \hline 84-volcanoes b2 & 8530 & 5 & 3 & 0 &  96.5 &   0.2\\
 85-volcanoes d1 & 7002 & 5 & 3 & 0 &  94.4 &   0.6\\
 43-mushroom & 6499 & 2 & 21 & 21 &  51.8 &  48.2\\\hline
 79-twonorm & 5920 & 2 & 20 & 0 &  50.0 &  50.0\\
@@ -127,7 +126,7 @@
 \caption{Bases de dados com menos exemplos.}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 18-dbworld subjects & 50 & 2 & 242 & 242 &  55.6 &  44.4\\
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritÃ¡ria\\(\%)}} & \rotatebox{0}{\makecell{minoritÃ¡ria\\(\%)}}\\ \hline 18-dbworld subjects & 50 & 2 & 242 & 242 &  55.6 &  44.4\\
 53-robot failure lp1 & 70 & 4 & 90 & 0 &  38.6 &  18.2\\
 33-leukemia haslinger & 80 & 2 & 50 & 0 &  51.0 &  49.0\\\hline
 36-molecular promotor... & 85 & 2 & 57 & 57 &  50.0 &  50.0\\
