--- a/macros.tex
+++ b/macros.tex
@@ -17,15 +17,15 @@
 \newcommand{\esb}[1]{\blue{#1}\xspace}
 \newcommand{\ano}[1]{\red{[$\star$ #1 $\star$]}\xspace}
 \newcommand{\tar}[1]{\green{$\star$ #1}\xspace}
-\newcommand{\versionspace}{espaÁo de versıes\xspace}
+\newcommand{\versionspace}{espa√ßo de vers√µes\xspace}
 
 \newcommand{\ing}[2]{\emph{#1}\footnote{\textit{#2}}}
 \newcommand{\novo}[1]{\emph{#1}}
-\newcommand{\eer}{reduÁ„o do erro esperado\xspace}
-\newcommand{\Eer}{ReduÁ„o do erro esperado\xspace}
-\newcommand{\elms}{\textit{m·quinas extremas}\xspace}
-\newcommand{\elm}{\textit{m·quina extrema}\xspace}
-\newcommand{\svm}{m·quina de vetores de suporte\xspace}
+\newcommand{\eer}{redu√ß√£o do erro esperado\xspace}
+\newcommand{\Eer}{Redu√ß√£o do erro esperado\xspace}
+\newcommand{\elms}{\textit{m√°quinas extremas}\xspace}
+\newcommand{\elm}{\textit{m√°quina extrema}\xspace}
+\newcommand{\svm}{m√°quina de vetores de suporte\xspace}
 \newcommand{\bom}[1]{\textcolor{blue}{\textbf{#1}}\xspace}
 \newcommand{\bomd}[1]{\textbf{#1}\xspace}
 \newcommand{\ruim}[1]{\textcolor{red}{\textbf{#1}}\xspace}
@@ -50,15 +50,15 @@
 
 
 
-% Backref com colocaÁ„o de "Citado na p·gina..."
+% Backref com coloca√ß√£o de "Citado na p√°gina..."
 \renewcommand*{\backref}[1]{}
 \renewcommand*{\backrefalt}[4]{
     \ifcase #1
-        N„o citado no texto.
+        N√£o citado no texto.
     \or
-        Citado na p·gina~#2.
+        Citado na p√°gina~#2.
     \else
-        Citado nas p·ginas #2.
+        Citado nas p√°ginas #2.
     \fi
 }
 
@@ -139,7 +139,7 @@
 
 
 \newcommand{\kparticoes}
-  {$k$-partiÁıes\xspace}
+  {$k$-parti√ß√µes\xspace}
 
 \newcommand{\coboosting}
   {\textsc{CO-BOOSTING}\xspace}
@@ -448,7 +448,7 @@
  \end{figure}
 }
 
-%%% inclus„o de figuras
+%%% inclus√£o de figuras
 % \figurajpg{escala}{nome.extensao}{label}{caption}
 \newcommand{\figurajpg}[5]
 {\begin{figure}[!h]
@@ -602,5 +602,3 @@
 
 \newcommand{\classifier}[1]
   {\ensuremath{\mathcal{C\hspace{-.05em}}^{#1}}\xspace}
-
-
