--- a/plot.tex
+++ b/plot.tex
@@ -1,14 +1,14 @@
 \begin{figure}
 \begin{center}
 \caption{Curvas de aprendizado.
-\textit{Suavizadas por média móvel com largura de $20$ exemplos.
+\textit{Suavizadas por mÃ©dia mÃ³vel com largura de $20$ exemplos.
 O valor
-% (média ou desvio padrão, dependendo da figura)
-para cada base é calculado baseado nas cinco execuções de validação cruzada.
+% (mÃ©dia ou desvio padrÃ£o, dependendo da figura)
+para cada base Ã© calculado baseado nas cinco execuÃ§Ãµes de validaÃ§Ã£o cruzada.
 Inclui apenas resultados para as bases com mais de 200 exemplos.}}
 \label{curvas}
 \begin{tikzpicture}[scale=1]
-\begin{axis}[xlabel=consultas, ylabel=kappa (média), legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
+\begin{axis}[xlabel=consultas, ylabel=kappa (mÃ©dia), legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, yticklabel style={/pgf/number format/fixed}]
 % budget Rnd Clu ATUeuc ATUman ATUmah HTUeuc HTUman HTUmah SGmulti QBCRFw Mar TUeuc TUman TUmah EERent SVMbal
 
