--- a/plotRisco.tex
+++ b/plotRisco.tex
@@ -1,10 +1,10 @@
 \begin{figure}
 \begin{center}
-\caption{Variabilidade das estratÈgias.
+\caption{Variabilidade das estrat√©gias.
 \textit{Detalhes na Figura \ref{curvas}.}}
 \label{curvasdesvio}
 \begin{tikzpicture}[scale=1]
-\begin{axis}[xlabel=consultas, ylabel=kappa (desvio padr„o), legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
+\begin{axis}[xlabel=consultas, ylabel=kappa (desvio padr√£o), legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, yticklabel style={/pgf/number format/fixed}]
 % budget Rnd Clu ATUeuc ATUman ATUmah HTUeuc HTUman HTUmah SGmulti QBCRFw Mar TUeuc TUman TUmah EERent SVMbal
 
