--- a/rankplot.tex
+++ b/rankplot.tex
@@ -4,7 +4,7 @@
 \label{curvasrank}
 \begin{center}
 \begin{tikzpicture}[scale=1]
-\begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
+\begin{axis}[xlabel=consultas, ylabel=colocaÃ§Ã£o, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
 
 \addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar] {KappamahamediaallRank.plot};\addlegendentry{Mar}
