--- a/resumo.tex
+++ b/resumo.tex
@@ -1,55 +1,55 @@
 \chapter*{Resumo}
-\esb{agradecimentos vai só na versão revisada?}
+\esb{agradecimentos vai sÃ³ na versÃ£o revisada?}
 
-\ano{arrumar vírgulas e pontos nos números}
+\ano{arrumar vÃ­rgulas e pontos nos nÃºmeros}
 
-\tar{possível novo título:}
+\tar{possÃ­vel novo tÃ­tulo:}
 
-\tar{Viabilidade do aprendizado de máquina ativo em vista da diversidade de
-estratégias}
+\tar{Viabilidade do aprendizado de mÃ¡quina ativo em vista da diversidade de
+estratÃ©gias}
 
 \ano{citar agencias de fomento? quais? onde?}
 
-\tar{remover citações de baixa qualidade no documento todo}
+\tar{remover citaÃ§Ãµes de baixa qualidade no documento todo}
 
- \tar{escrever sobre implementação (apendice?):
- URL, diagrama de classes, LOC, custos totais CPU/memória/disco, total de
+ \tar{escrever sobre implementaÃ§Ã£o (apendice?):
+ URL, diagrama de classes, LOC, custos totais CPU/memÃ³ria/disco, total de
 registros no BD}
 
 \tar{aprendiz / algoritmo de aprendizado / classificador}
 
-Apesar do crescente avanço no desenvolvimento de algoritmos capazes de induzir modelos preditivos
-numa grande diversidade de domínios, entraves de cunho econômico, dentre outros, ainda persistem.
-Embora tais modelos sejam construídos sem programação explícita,
-eles não podem, em geral, dispensar a supervisão humana no processo inicial de descoberta de rótulos que
-normalmente se atribuem a certas parcelas dos dados disponíveis.
+Apesar do crescente avanÃ§o no desenvolvimento de algoritmos capazes de induzir modelos preditivos
+numa grande diversidade de domÃ­nios, entraves de cunho econÃ´mico, dentre outros, ainda persistem.
+Embora tais modelos sejam construÃ­dos sem programaÃ§Ã£o explÃ­cita,
+eles nÃ£o podem, em geral, dispensar a supervisÃ£o humana no processo inicial de descoberta de rÃ³tulos que
+normalmente se atribuem a certas parcelas dos dados disponÃ­veis.
 Em vista da forte possibilidade dos dados serem massivos,
-as parcelas não podem ser proporcionais ao total de dados.
-Elas devem permanecer pequenas, dentro do devido orçamento.
-Isso propõe um compromisso entre o custo de rotulação e a acurácia preditiva,
-cuja solução pode ser a adoção de uma técnica de aprendizado ativo.
+as parcelas nÃ£o podem ser proporcionais ao total de dados.
+Elas devem permanecer pequenas, dentro do devido orÃ§amento.
+Isso propÃµe um compromisso entre o custo de rotulaÃ§Ã£o e a acurÃ¡cia preditiva,
+cuja soluÃ§Ã£o pode ser a adoÃ§Ã£o de uma tÃ©cnica de aprendizado ativo.
 
-Existem diversas abordagens de se amostrarem ativamente os dados para rotulação.
-Diferentemente do aprendizado passivo, não é possível testá-las para posterior escolha da melhor
-segundo alguma métrica de acurácia.
-A cada rótulo obtido incorre-se em custo adicional.
-Dessa forma, a situação ideal seria a ciência prévia da melhor estratégia
-para o domínio em questão, mesmo com poucos rótulos conhecidos de antemão;
+Existem diversas abordagens de se amostrarem ativamente os dados para rotulaÃ§Ã£o.
+Diferentemente do aprendizado passivo, nÃ£o Ã© possÃ­vel testÃ¡-las para posterior escolha da melhor
+segundo alguma mÃ©trica de acurÃ¡cia.
+A cada rÃ³tulo obtido incorre-se em custo adicional.
+Dessa forma, a situaÃ§Ã£o ideal seria a ciÃªncia prÃ©via da melhor estratÃ©gia
+para o domÃ­nio em questÃ£o, mesmo com poucos rÃ³tulos conhecidos de antemÃ£o;
 ou, em maior detalhe,
-para cada instante durante a aquisição de rótulos naquele domínio.
+para cada instante durante a aquisiÃ§Ã£o de rÃ³tulos naquele domÃ­nio.
 
-Nesta tese, a viabilidade do aprendizado ativo é comprovada empiricamente com
-solidez estatística 
-de acordo com três pontos de vista: adaptação e comparação dos principais
+Nesta tese, a viabilidade do aprendizado ativo Ã© comprovada empiricamente com
+solidez estatÃ­stica 
+de acordo com trÃªs pontos de vista: adaptaÃ§Ã£o e comparaÃ§Ã£o dos principais
 paradigmas e de sua efetividade em geral;
-na definição de nichos adequados para cada estratégia;
-e, na demonstração de que é possível definir previamente as estratégias mais
+na definiÃ§Ã£o de nichos adequados para cada estratÃ©gia;
+e, na demonstraÃ§Ã£o de que Ã© possÃ­vel definir previamente as estratÃ©gias mais
 adequadas automaticamente. \ano{conferir}
-É também empreendida uma análise amplamente negligenciada pela
-literatura da área:
-o risco devido à variabilidade dos algoritmos.
+Ã‰ tambÃ©m empreendida uma anÃ¡lise amplamente negligenciada pela
+literatura da Ã¡rea:
+o risco devido Ã  variabilidade dos algoritmos.
 
-% o viés de amostragem tem seus perigos, então quando não há diferença estatística entre aleatório e AA, deve-se prefirir aleatório,
+% o viÃ©s de amostragem tem seus perigos, entÃ£o quando nÃ£o hÃ¡ diferenÃ§a estatÃ­stica entre aleatÃ³rio e AA, deve-se prefirir aleatÃ³rio,
 % ou melhor, cluster-based, por suas garantias estatisticas peculiares.
 
 \newpage
