--- a/treeALCKappaperd.tex
+++ b/treeALCKappaperd.tex
@@ -47,7 +47,7 @@ DWman: 14\\
 % \textbf{SGmulti}: 0\\
 % \textbf{HTUmah}: 0\\
 % \textbf{ATUeuc}: 0\\
-demais: 13} edge from parent node [cond] {$>75.5$}}edge from parent node [cond] {rÌgida}}
+demais: 13} edge from parent node [cond] {$>75.5$}}edge from parent node [cond] {r√≠gida}}
 child {node [decision] {algoritmo}
 child {node [decision] {\#atributos}
 child {node [outcome] {
@@ -269,6 +269,6 @@ DWeuc: 3\\
 % EERent: 0\\
 % \textbf{SGmulti}: 0\\
 % \textbf{HTUmah}: 0\\
-demais: 12} edge from parent node [cond] {$>25.9$}}edge from parent node [cond] {SVM}}edge from parent node [cond] {flexÌvel}}
+demais: 12} edge from parent node [cond] {$>25.9$}}edge from parent node [cond] {SVM}}edge from parent node [cond] {flex√≠vel}}
 %
 ;
