--- a/classifsTab.tex
+++ b/classifsTab.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{Kappa: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{Kappa: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c}
  & 5NN & C4.5w & CIELM & NB & RFw & SVM & VFDTw\\ \hline 1-abalone 3class & \textcolor{red}{\textbf{  0.37}} &   0.43 & \underline{\textcolor{blue}{\textbf{  0.49}}} &   0.38 &   0.46 & \textcolor{black}{\textbf{  0.48}} & \textcolor{red}{\textbf{  0.37}} \\
 2-arcene & \underline{\textcolor{blue}{\textbf{  0.74}}} &   0.36 &   0.44 & \textcolor{red}{\textbf{  0.34}} &   0.64 & \textcolor{black}{\textbf{  0.70}} & \textcolor{red}{\textbf{  0.34}} \\
@@ -38,7 +38,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{Kappa: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{Kappa: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c}
  & 5NN & C4.5w & CIELM & NB & RFw & SVM & VFDTw\\ \hline 34-mammographic mass & \textcolor{red}{\textbf{  0.48}} &   0.62 & \textcolor{blue}{\textbf{  0.63}} & \textcolor{blue}{\textbf{  0.63}} &   0.61 &   0.62 &   0.60 \\
 35-mfeat fourier &   0.78 & \textcolor{red}{\textbf{  0.72}} &   0.78 &   0.74 & \underline{\textcolor{blue}{\textbf{  0.82}}} & \textcolor{black}{\textbf{  0.81}} &   0.74 \\
@@ -76,7 +76,7 @@
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{Kappa: O maior valor de cada base est· em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est„o sublinhados. Apenas negrito indica segundo melhor valor.}
+\caption{Kappa: O maior valor de cada base est√° em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados est√£o sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c}
  & 5NN & C4.5w & CIELM & NB & RFw & SVM & VFDTw\\ \hline 67-statlog landsat sa... & \textcolor{black}{\textbf{  0.88}} &   0.82 &   0.86 &   0.81 & \underline{\textcolor{blue}{\textbf{  0.90}}} & \textcolor{black}{\textbf{  0.88}} & \textcolor{red}{\textbf{  0.78}} \\
 68-statlog vehicle si... &   0.59 &   0.60 & \underline{\textcolor{blue}{\textbf{  0.70}}} &   0.47 &   0.67 & \textcolor{black}{\textbf{  0.68}} & \textcolor{red}{\textbf{  0.28}} \\
