--- a/dataset-tables.tex
+++ b/dataset-tables.tex
@@ -1,9 +1,8 @@
-
 \begin{table}[h]
-\caption{Características das bases de dados (1-33).}
+\caption{CaracterÃ­sticas das bases de dados (1-33).}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 1-abalone 3class & 3342 & 3 & 8 & 1 &  34.6 &  31.7\\
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritÃ¡ria\\(\%)}} & \rotatebox{0}{\makecell{minoritÃ¡ria\\(\%)}}\\ \hline 1-abalone 3class & 3342 & 3 & 8 & 1 &  34.6 &  31.7\\
 2-arcene & 160 & 2 & 998 & 0 &  56.0 &  44.0\\
 3-artificial charact... & 3890 & 10 & 7 & 0 &  14.4 &   6.0\\\hline
 4-autoUniv au1 1000 & 798 & 2 & 20 & 0 &  74.1 &  25.9\\
@@ -40,10 +39,10 @@
 \end{center}
 \end{table}
 \begin{table}[h]
-\caption{Características das bases de dados (34-66).}
+\caption{CaracterÃ­sticas das bases de dados (34-66).}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 34-mammographic mass & 514 & 2 & 5 & 0 &  52.5 &  47.5\\
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritÃ¡ria\\(\%)}} & \rotatebox{0}{\makecell{minoritÃ¡ria\\(\%)}}\\ \hline 34-mammographic mass & 514 & 2 & 5 & 0 &  52.5 &  47.5\\
 35-mfeat fourier & 1595 & 10 & 76 & 0 &  10.0 &   9.9\\
 36-molecular promotor... & 85 & 2 & 57 & 57 &  50.0 &  50.0\\\hline
 37-molecular splice j... & 2404 & 3 & 60 & 60 &  55.0 &  22.4\\
@@ -80,10 +79,10 @@
 \end{center}
 \end{table}
 \begin{table}[h]
-\caption{Características das bases de dados (67-94).}
+\caption{CaracterÃ­sticas das bases de dados (67-94).}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 67-statlog landsat sa... & 2287 & 6 & 36 & 0 &  30.5 &   9.6\\
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritÃ¡ria\\(\%)}} & \rotatebox{0}{\makecell{minoritÃ¡ria\\(\%)}}\\ \hline 67-statlog landsat sa... & 2287 & 6 & 36 & 0 &  30.5 &   9.6\\
 68-statlog vehicle si... & 677 & 4 & 18 & 0 &  25.8 &  23.5\\
 69-steel plates fault... & 1553 & 2 & 33 & 0 &  65.3 &  34.7\\\hline
 70-systhetic control & 480 & 6 & 60 & 0 &  16.7 &  16.7\\
