--- a/exp-elm.tex
+++ b/exp-elm.tex
@@ -1,18 +1,18 @@
-% % Máquinas Extremas de Aprendizado Ativo
-% \section{Adaptações de \elms}\label{elmnovas}
-% A código das adaptações apresentadas nas próximas seções e outras variantes
-% está disponível publicamente \citep{doi/elm}.
+% % MÃ¡quinas Extremas de Aprendizado Ativo
+% \section{AdaptaÃ§Ãµes de \elms}\label{elmnovas}
+% A cÃ³digo das adaptaÃ§Ãµes apresentadas nas prÃ³ximas seÃ§Ãµes e outras variantes
+% estÃ¡ disponÃ­vel publicamente \citep{doi/elm}.
 % 
 % \esb{estudo de caso para um dado learner}
 % 
-% \tar{menciona inexistência da combinação de ELM e AL na literatura
+% \tar{menciona inexistÃªncia da combinaÃ§Ã£o de ELM e AL na literatura
 % e mostra AL sendo melhor que aleat e nao muito pior que passiva;
 % explorar resultados separadamente pra cada tipo de ELM}
 % 
-% \tar{ impossível completar todas as bases, mas ok;
-% quanto mais memória, mais datasets}
+% \tar{ impossÃ­vel completar todas as bases, mas ok;
+% quanto mais memÃ³ria, mais datasets}
 % 
-% \ano{ELM ainda não sabe lidar com exemplos ponderados! (necessário para SGmulti*)}
+% \ano{ELM ainda nÃ£o sabe lidar com exemplos ponderados! (necessÃ¡rio para SGmulti*)}
 % 
 % \subsection{I-ELM interativa}
 % 
@@ -25,10 +25,10 @@
 % \subsection{OSEM-PRESS-ELM}
 % \ano{foi usada ELM com topologia raiz(N) no segundo experimento preliminar para demonstrar viabilidade
 % de AL com ELM \citep{santos2014viabilidade};
-% e tb foi usada como metaclassificador no último experimento}
+% e tb foi usada como metaclassificador no Ãºltimo experimento}
 % \tar{citar apendice}
 % 
-% \section{Máquina extrema de aprendizado ativo baseada no impacto esperado}
+% \section{MÃ¡quina extrema de aprendizado ativo baseada no impacto esperado}
 % experimenta ExpELMChange
 % (AL especifico pra nintera e/ou pra IELM e/ou CIELM) -
 % comparar com outras estrats.
