--- a/notacao.tex
+++ b/notacao.tex
@@ -1,94 +1,94 @@
-\section{Terminologia e notaÁ„o}\label{notacao}
-O conjunto de sÌmbolos e termos empregados neste texto s„o definidos nesta seÁ„o.
-Ele È baseado no livro de \cite{series/synthesis/2012Settles}, mas adaptado para ser compatÌvel
+\section{Terminologia e nota√ß√£o}\label{notacao}
+O conjunto de s√≠mbolos e termos empregados neste texto s√£o definidos nesta se√ß√£o.
+Ele √© baseado no livro de \cite{series/synthesis/2012Settles}, mas adaptado para ser compat√≠vel
 com a literatura de \elms e meta-aprendizado
 \citep{journals/tsmc/HuangZDZ12,books/daglib/0022052}.
-\ano{realmente usa alguma notaÁ„o de meta-aprendizado?}
+\ano{realmente usa alguma nota√ß√£o de meta-aprendizado?}
 Embora a maioria dos algoritmos empregados nos experimentos sejam por
-\ing{lote de exemplos}{batch}, a notaÁ„o assume que o aprendizado ocorre incrementalmente
-por meio do subscrito $(t), t \in \mathbb{N}$ que representa a iteraÁ„o ou quantidade de exemplos
-incorporados ao treinamento atÈ o momento.
-O uso de parÍnteses visa diferenci·-lo mais claramente do subscrito convencional de vetores que
-indica o valor para uma dada posiÁ„o.
+\ing{lote de exemplos}{batch}, a nota√ß√£o assume que o aprendizado ocorre incrementalmente
+por meio do subscrito $(t), t \in \mathbb{N}$ que representa a itera√ß√£o ou quantidade de exemplos
+incorporados ao treinamento at√© o momento.
+O uso de par√™nteses visa diferenci√°-lo mais claramente do subscrito convencional de vetores que
+indica o valor para uma dada posi√ß√£o.
 
-O termo \textit{classificador} È utilizado quando se trata do produto esperado do processo
+O termo \textit{classificador} √© utilizado quando se trata do produto esperado do processo
 realizado pelo \textit{algoritmo de aprendizado}.
-A classificaÁ„o de exemplos se baseia no ˙ltimo modelo $\theta$ induzido pelo algoritmo.
-Durante a induÁ„o, se o algoritmo integrar uma estratÈgia de aprendizado ativo,
-ele È chamado de \textit{aprendiz}.
-Apesar de contradizerem o princÌpio motivador do aprendizado ativo explicitado
-na SeÁ„o \ref{aprendizado-ativo},
-existem estratÈgias sem aprendiz, chamadas neste trabalho de \textit{agnÛsticas}.
+A classifica√ß√£o de exemplos se baseia no √∫ltimo modelo $\theta$ induzido pelo algoritmo.
+Durante a indu√ß√£o, se o algoritmo integrar uma estrat√©gia de aprendizado ativo,
+ele √© chamado de \textit{aprendiz}.
+Apesar de contradizerem o princ√≠pio motivador do aprendizado ativo explicitado
+na Se√ß√£o \ref{aprendizado-ativo},
+existem estrat√©gias sem aprendiz, chamadas neste trabalho de \textit{agn√≥sticas}.
 \cite{conf/isaim/DasguptaHM08} define o termo de outro ponto de vista:
-``um \textit{aprendiz ativo agnÛstico} È aquele que n„o assume a existÍncia de uma
-fronteira de decis„o perfeita'', porÈm a definiÁ„o sobre a ausÍncia de aprendiz
-È mais conveniente nesta tese.
+``um \textit{aprendiz ativo agn√≥stico} √© aquele que n√£o assume a exist√™ncia de uma
+fronteira de decis√£o perfeita'', por√©m a defini√ß√£o sobre a aus√™ncia de aprendiz
+√© mais conveniente nesta tese.
 % an agnostic active learner (one that does not assume a perfect separator exists)
 % http://machinelearning.wustl.edu/mlpapers/paper_files/NIPS2007_178.pdf
-% o cen·rio de aprendizado agnÛstico n„o faz suposiÁıes a respeito da origem dos rÛtulos.
+% o cen√°rio de aprendizado agn√≥stico n√£o faz suposi√ß√µes a respeito da origem dos r√≥tulos.
 % This is often referred to as the agnostic learning setting,
 % since we make no assumptions about the origin of the labels.
 % http://www.jennwv.com/courses/F11/lecture4.pdf
 
-Os exemplos ainda n„o consultados s„o chamados, neste trabalho,
+Os exemplos ainda n√£o consultados s√£o chamados, neste trabalho,
 de \textit{candidatos}. \ano{onde?}
-Por simplicidade, o aprendizado È dito \textit{passivo} se for realizado com todos os exemplos e
-todos os rÛtulos presentes.
-A estratÈgia de amostragem de maior correspondÍncia com o aprendizado passivo È a aleatÛria,
-pois tende a ser uma aproximaÁ„o n„o enviesada de todo o conjunto de exemplos.
+Por simplicidade, o aprendizado √© dito \textit{passivo} se for realizado com todos os exemplos e
+todos os r√≥tulos presentes.
+A estrat√©gia de amostragem de maior correspond√™ncia com o aprendizado passivo √© a aleat√≥ria,
+pois tende a ser uma aproxima√ß√£o n√£o enviesada de todo o conjunto de exemplos.
 
-Cada \textit{consulta} de uma dada estratÈgia ao \textit{or·culo} visa a obtenÁ„o
-do \textit{rÛtulo} que indica a \textit{classe} de um dado exemplo.
-A determinaÁ„o da classe de um exemplo È chamada de \textit{rotulaÁ„o}.
-Uma classe $c$ pertence ao conjunto de classes possÌveis $C$ para um dado problema e
-È representada por um vetor bin·rio $\bm{y} \in Y$,
-sendo $Y$ formalmente definido pela EquaÁ„o \ref{ydef}.
+Cada \textit{consulta} de uma dada estrat√©gia ao \textit{or√°culo} visa a obten√ß√£o
+do \textit{r√≥tulo} que indica a \textit{classe} de um dado exemplo.
+A determina√ß√£o da classe de um exemplo √© chamada de \textit{rotula√ß√£o}.
+Uma classe $c$ pertence ao conjunto de classes poss√≠veis $C$ para um dado problema e
+√© representada por um vetor bin√°rio $\bm{y} \in Y$,
+sendo $Y$ formalmente definido pela Equa√ß√£o \ref{ydef}.
 \begin{equation}\label{ydef}
  Y = \{\bm{y} \mid y_o=1, y_p=0 \forall o \neq p, 1 \leq p \leq |C|\}
 \end{equation}
-Essa representaÁ„o bin·ria, por exemplo, $\Y=\{(0,0,1),(0,1,0),(1,0,0)\}$,
-È conhecida como \ing{um-de-n}{one-hot encoding} (\cite{Harris:2007:DDC}).
-O vetor $\bm{y}=\{0,1,0\}$ È um exemplo de \textit{representaÁ„o de classe} e È
-chamado apenas de \textit{classe} de um dado exemplo por conveniÍncia.
+Essa representa√ß√£o bin√°ria, por exemplo, $\Y=\{(0,0,1),(0,1,0),(1,0,0)\}$,
+√© conhecida como \ing{um-de-n}{one-hot encoding} (\cite{Harris:2007:DDC}).
+O vetor $\bm{y}=\{0,1,0\}$ √© um exemplo de \textit{representa√ß√£o de classe} e √©
+chamado apenas de \textit{classe} de um dado exemplo por conveni√™ncia.
 
-O indicador de iteraÁ„o $(t)$ È usado quando o contexto exige situar o aprendizado
+O indicador de itera√ß√£o $(t)$ √© usado quando o contexto exige situar o aprendizado
 no tempo, na medida em que a quantidade de exemplos aumenta um a um.
 O conjunto de valores assumidos pelos atributos \textit{descritivos} de um exemplo
-È dado por uma tupla\footnote {Ou vetor, quando o contexto for de ·lgebra linear.}
-$\bm{x}$ pertencente ao conjunto $X$ de tuplas possÌveis de atributos descritivos
-(exemplos n„o rotulados).
-Dessa forma, a representaÁ„o completa de um exemplo È um par
+√© dado por uma tupla\footnote {Ou vetor, quando o contexto for de √°lgebra linear.}
+$\bm{x}$ pertencente ao conjunto $X$ de tuplas poss√≠veis de atributos descritivos
+(exemplos n√£o rotulados).
+Dessa forma, a representa√ß√£o completa de um exemplo √© um par
 %  \ano{dupla/tupla?}
 $\langle \bm{x}_{(t)}, \bm{y}_{(t)} \rangle \in X\times Y$.
-Os valores possÌveis de cada componente de $\bm{x}$ s„o dados por um conjunto
-$\bm{a}$ pertencente a $A$. $A$ È o conjunto de atributos descritivos de um dado problema.
-Assim, cada atributo $\bm{a} \in A$ È o conjunto de todos os valores que cada componente
+Os valores poss√≠veis de cada componente de $\bm{x}$ s√£o dados por um conjunto
+$\bm{a}$ pertencente a $A$. $A$ √© o conjunto de atributos descritivos de um dado problema.
+Assim, cada atributo $\bm{a} \in A$ √© o conjunto de todos os valores que cada componente
 $b \in \{x_i \mid 1 \leq i < \dime{\bm{x}}\}$ da tupla/vetor $\bm{x}$ pode assumir,
 por exemplo $\bm{a}=\{\textit{alto},\textit{medio},\textit{baixo}\}$ e $b=medio$ ou
 $\bm{a} = \mathbb{R}$ e $b=3.7$.
-O tipo de atributo È dado pela funÁ„o $\nom:A\rightarrow\{0,1\}$ que retorna $1$ para
-atributos nominais e $0$ para atributos numÈricos.
+O tipo de atributo √© dado pela fun√ß√£o $\nom:A\rightarrow\{0,1\}$ que retorna $1$ para
+atributos nominais e $0$ para atributos num√©ricos.
 
 Dado um exemplo $\bm{x}$ e supondo que o modelo $\theta$ permita
-estimaÁ„o da probabilidade de $\bm{x}$ ter a classe $\bm{y}$,
-ela È denotada por $P_{\theta}$,
-sendo que $\hat{\bm{y}}$ È classe mais mais prov·vel conforme a EquaÁ„o \ref{p}.
+estima√ß√£o da probabilidade de $\bm{x}$ ter a classe $\bm{y}$,
+ela √© denotada por $P_{\theta}$,
+sendo que $\hat{\bm{y}}$ √© classe mais mais prov√°vel conforme a Equa√ß√£o \ref{p}.
 \begin{equation}\label{p}
   \hat{\bm{y}} = \argmax_{\bm{y}} P_{\theta} (\bm{y}|\bm{x})
 \end{equation}
-$P_{\theta}$ È a base de grande parte das medidas de informatividade $Inf(\bm{x})$ de exemplos.
-% Adicionalmente, e considerando uma construÁ„o incremental da hipÛtese
+$P_{\theta}$ √© a base de grande parte das medidas de informatividade $Inf(\bm{x})$ de exemplos.
+% Adicionalmente, e considerando uma constru√ß√£o incremental da hip√≥tese
 % (de forma a incorporar uma componente temporal $t$ de instante/ordem de chegada),
 % o algoritmo de treinamento do modelo $\theta$ pode ser representado por
-% $a: \langle \{\theta_1, \theta_2, ...\},X,Y \rangle \rightarrow \{\theta_1, \theta_2, ...\}$, de forma que cada novo modelo $\theta^{(t+1)}$ È dado por:
+% $a: \langle \{\theta_1, \theta_2, ...\},X,Y \rangle \rightarrow \{\theta_1, \theta_2, ...\}$, de forma que cada novo modelo $\theta^{(t+1)}$ √© dado por:
 % \begin{equation}
 %   \theta^{(t+1)} = a(\theta^{(t)}, \langle \bm{x},y \rangle), \forall t \in \mathbb{N^{+}}
 % \end{equation}
-A classe \textit{minorit·ria} È a de menor ocorrÍncia e a \textit{majorit·ria} a de maior ocorrÍncia.
-Os sÌmbolos $\mathcal{U}$ e $\mathcal{L}$ representam a
+A classe \textit{minorit√°ria} √© a de menor ocorr√™ncia e a \textit{majorit√°ria} a de maior ocorr√™ncia.
+Os s√≠mbolos $\mathcal{U}$ e $\mathcal{L}$ representam a
 reserva de exemplos \citep{series/synthesis/2012Settles}
-e o conjunto de exemplos j· rotulados, respectivamente.
-$\cent$ È o valor do orÁamento ou, em outras palavras, o n˙mero de consultas permitido.
+e o conjunto de exemplos j√° rotulados, respectivamente.
+$\cent$ √© o valor do or√ßamento ou, em outras palavras, o n√∫mero de consultas permitido.
 
 
 
@@ -96,12 +96,12 @@ $\cent$ È o valor do orÁamento ou, em outras palavras, o n˙mero de consultas per
 % h: \mathcal{D} \rightarrow \{-,+\}
 % \end{equation}
 
-% Assim, o domÌnio de uma dado problema de classificaÁ„o È definido pela tupla
+% Assim, o dom√≠nio de uma dado problema de classifica√ß√£o √© definido pela tupla
 % $\{X,Y,A\}$
-As consultas podem ser \ing{exploratÛrias}{for exploration}, que buscam maximizar
+As consultas podem ser \ing{explorat√≥rias}{for exploration}, que buscam maximizar
 a variedade na escolha de exemplos; ou \ing{prospectivas}{for exploitation},
-que se concentram apenas nos casos mais crÌticos,
+que se concentram apenas nos casos mais cr√≠ticos,
 ou seja, com maior \textit{informatividade}.
-O limite de duraÁ„o para processamento computacional entre consultas
-È chamado \ing{tempo de espera toler·vel}{tolerable waiting time},
-pois È a espera efetivamente sentida pelo or·culo.
+O limite de dura√ß√£o para processamento computacional entre consultas
+√© chamado \ing{tempo de espera toler√°vel}{tolerable waiting time},
+pois √© a espera efetivamente sentida pelo or√°culo.
