--- a/rankplotRisco.tex
+++ b/rankplotRisco.tex
@@ -1,10 +1,10 @@
 \begin{figure}
-\caption{Variabilidade ranqueada das estratégias.
+\caption{Variabilidade ranqueada das estratÃ©gias.
  \textit{Detalhes na Figura \ref{curvas}.}}
 \label{curvasrankdesvio}
 \begin{center}
 \begin{tikzpicture}[scale=1]
-\begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
+\begin{axis}[xlabel=consultas, ylabel=colocaÃ§Ã£o, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
 % budget Rnd Clu ATUeuc ATUman ATUmah HTUeuc HTUman HTUmah SGmulti QBCRFw Mar TUeuc TUman TUmah EERent SVMbal
 
